# experimentations

./: .gitignore  CMakeLists.txt  README.md
acc/: CMakeLists.txt  README  assembly_generator.h  ast.h  log.h  main.c  parsing.h
acc/src/: assembly_generator.c  ast.c  parsing.c
acc/src/generators/: assembly_generator_x86_64.c  generator_api.h
evolve/: CMakeLists.txt  main.cpp  temp.drawio
evolve/scene/: AliveComponent.hpp  PhysicComponent.hpp  Scene.hpp  SceneEntity.hpp  SpriteComponent.hpp
evolve/src/: AliveComponent.cpp  PhysicComponent.cpp  Scene.cpp  SceneEntity.cpp  SpriteComponent.cpp
hardwaresim/: CMakeLists.txt  architecture.mdj
ide/: CMakeLists.txt  README.md  main.cpp
nn/: CMakeLists.txt  main.cpp  matrice.cpp  matrix.cpp  nn.cpp  nn.hpp  xor.cpp
nn/thoughts/: the_math.md
opencv/: CMakeLists.txt  main.cpp
pong_from_scratch/: .bochsrc  .gitignore  CMakeLists.txt  README.md  init.asm  main.asm  toolchain.cmake
qengine/: index.html  script.js
qengine/quantum-engine/: Cargo.toml
qengine/quantum-engine/src/: lib.rs
rar/: README.md
rar/src/: main.rs
raytracing/: CMakeLists.txt  color.hpp  colors.hpp  main.cpp  math.hpp  ppm.cpp  ppm.hpp  ray.hpp  raytracing.cpp  raytracing.hpp  simdvec.hpp  util.hpp  vec.hpp  vec3f.hpp
raytracing/geometry/: hittable.hpp  hittable_list.hpp  sphere.hpp
raytracing/graphic/: ray.hpp
raytracing/graphics/: camera.hpp  color.hpp  ray.hpp
raytracing/src/: camera.cpp  hittable.cpp  hittable_list.cpp  ppm.cpp  ray.cpp  sphere.cpp  vec3f.cpp
sfml_game/: CMakeLists.txt  game.hpp  main.cpp  world.hpp
sfml_game/entity/: aircraft.hpp  entity.hpp
sfml_game/resource/: resource_holder.hpp  resource_id.hpp  types.hpp
sfml_game/scene/: layer_node.hpp  scene_node.hpp  sprite_node.hpp
sfml_game/src/: aircraft.cpp  entity.cpp  game.cpp  scene_node.cpp  sprite_node.cpp  texture_holder.cpp  world.cpp
sfml_game/textures/: texture_holder.hpp  texture_id.hpp
stock/: pom.xml
stock/src/: main.kt
stock/src/main/kotlin/fr/adriencournand/stock/gui/: Home.kt
stock/user_interface/gui/javafx_gui/src/: JavaFxGui.kt
stock/user_interface/gui/src/: GuiBuilder.kt  GuiType.kt  GuiTypeNotfoundException.kt
stock/user_interface/src/: IUserInterface.kt
temp/: CMakeLists.txt  dynamic.cpp  main.cpp  static.cpp  static.hpp
util/module/: CMakeLists.txt  module.hpp  platform_util.hpp  platforme.hpp
util/module/src/: module.cpp  platform_unix.cpp  platform_win32.cpp
wust/: Cargo.toml
wust/src/: lib.rs.tmp  main.rs
wust/src/threading/: mod.rs  queue.rs
wust/test/: 404.html  index.html
